Implementazione dell'User Stories 16 e risoluzione di eventuali bug.