@@ -1,31 +1,35 @@
 package com.musicplayer;
 
+import java.util.Arrays;
 import java.util.List;
 
-/**
- * StatoPlaylist: stato del contesto "Playlist" del pattern State.
- */
-public class StatoPlaylist implements Stato {
+public class StatoPlaylist implements StatoUI {
+    
+    private final String nomePlaylist;
 
-    private final Playlist playlist;
-
-    public StatoPlaylist(Playlist playlist) {
-        this.playlist = playlist;
+    public StatoPlaylist(String nomePlaylist) {
+        this.nomePlaylist = nomePlaylist;
     }
 
     @Override
     public List<String> getOpzioniSingolo() {
-        return List.of("Aggiungi tag", "Modifica", "Elimina brano", "Aggiungi a playlist", "Rimuovi da questa playlist");
+        return Arrays.asList("Rimuovi da questa playlist");
     }
 
-    public void eseguiOpzione(String op, Brano brano, LibreriaController controller) {
-        if (op == null || controller == null || brano == null)
-            return;
-
-        switch (op) {
-            case "Rimuovi da questa playlist" -> controller.rimuoviDaPlaylist(playlist, brano);
-            case "Aggiungi a playlist" -> controller.aggiungiAPlaylist(brano, "default");
-            default -> System.out.println("Opzione gestita altrove o non valida: " + op);
+    @Override
+    public void eseguiOpzione(String opzione, Brano selezionato, LibreriaController controller, LibreriaView view) {
+        if (opzione == null || selezionato == null || controller == null) return;
+        
+        if (opzione.equals("Rimuovi da questa playlist")) {
+            try {
+                // 🚀 Avvolgiamo la chiamata in un blocco try-catch per gestire l'eccezione controllata
+                controller.rimuoviDaPlaylist(selezionato, nomePlaylist);
+            } catch (ValidazioneException ve) {
+                // Sfruttiamo il quarto parametro 'view' per mostrare il popup di errore a schermo
+                view.mostraErrore(ve);
+            } catch (Exception e) {
+                view.mostraErrore(new ValidazioneException("Errore durante la rimozione: " + e.getMessage()));
+            }
         }
     }
 }
